# year5

sem1/QA/: МЗЯПС Лабараторна №4.xlsx  МЗЯПС Лабараторна №7.pptx
sem1/QA/lab6/: README.md  conftest.py  requirements.txt
sem1/QA/lab6/api/: client.py
sem1/QA/lab6/pages/: base_page.py  locators.py  market_page.py  trade_page.py
sem1/QA/lab6/tests/: test_api_general.py  test_ui_market_data.py  test_ui_trading.py
sem1/distributed/lab1/: CMakeLists.txt  generator.py  main.cpp
sem1/distributed/lab1/input/exanple3/: testA.mtx  testx.mtx
sem1/distributed/lab2/: CMakeLists.txt  gpu_solver.cu  main.cpp
sem1/distributed/lab3/: CMakeLists.txt  main.cpp
sem1/mmpz/lab3/: constans.py  dfa.py  main.py  mealy.py  mili_to_mura.py  minimizator.py  moore.py  nfa.py  regex.py  transformer.py
sem1/mmpz/lab4/: main.py  mult.py
sem2/program_oriented_logic/lab4/: main.py
sem2/program_oriented_logic/lab4/examples/: input.txt  input2.txt
